--- a/front/package.json
+++ b/front/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.7.1"
+    "react-router-dom": "^7.7.1",
+    "sass": "^1.89.2",
+    "scss": "^0.2.4"
   },
   "devDependencies": {
     "@eslint/js": "^9.30.1",
